--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
+    "dotenv": "^16.3.1",
     "firebase": "^10.4.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
